[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MinAtar"
version = "1.0.15"
description = "A miniaturized version of the Arcade Learning Environment."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "GPL" }
authors = [
    { name = "Kenny Young", email = "kjyoung@ualberta.ca" },
]
urls = { Homepage = "https://github.com/kenjyoung/MinAtar" }
dependencies = [
    "gymnasium>=0.26.0",
    "numpy>=1.21.0",
    "matplotlib>=3.0.3",
    "seaborn>=0.9.0",
    "scipy>=1.2.1",
]

[project.optional-dependencies]
examples = [
    "torch>=1.0.0",
]

[project.entry-points."gymnasium.envs"]
MinAtar = "minatar.gym:register_envs"

[tool.setuptools]
packages = ["minatar", "minatar.environments"]
